2007-06-23  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: updates for release

2007-06-21  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: doc updates for release
	* doc/manual/SPG.texi: doc updates for release
	* doc/manual/STREAMS_FAQ.texi: doc updates for release
	* doc/manual/bugs.texi: doc updates for release
	* doc/manual/configure.texi: doc updates for release
	* doc/manual/descrip.texi: doc updates for release
	* doc/manual/drivers.texi: doc updates for release
	* doc/manual/modules.texi: doc updates for release
	* doc/manual/porting.texi: doc updates for release
	* doc/manual/releases.texi: doc updates for release
	* doc/manual/rpm.texi: doc updates for release
	* doc/manual/todo.texi: doc updates for release
	* doc/manual/tree.texi: doc updates for release
	* doc/manual/utilities.texi: doc updates for release
	* src/kernel/strsysctl.c: correction to F7 changes

2007-06-20  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: updates for Fedora 7 and 2.6.21 kernel
	* src/kernel/strsysctl.c: updates for Fedora 7 and 2.6.21 kernel
	* src/modules/sth.c: updates for Fedora 7 and 2.6.21 kernel
	* doc/manual/news.texi: new distro/kernel support
	* doc/manual/prerequisites.texi: new distro/kernel support
	* scripts/texi/install.texi: change LiS to LfS in example
	* streams.spec.in: recognize Fedora 7 kernels
	* streams.lsm.in: update file sizes for release

2007-06-18  Brian Bidulock  <bidulock@openss7.org>

	* doc/papers/Makefile.am: updates to pass distcheck target
	* src/modules/sth.c: pass 32-bit checks

2007-06-17  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* doc/papers/piperesults.tex: updates for release

2007-06-16  Brian Bidulock  <bidulock@openss7.org>

	* doc/papers/Makefile: updates for release
	* doc/papers/Makefile.am: updates for release
